# rag-learning-assistant

./: .gitignore  Dockerfile  README.md  docker-compose.yml  idea.md  main.py  pyproject.toml  streamlit_app.py
backend/api/routes/: documents.py
backend/core/rag/: embedder.py  llm.py  parser.py
backend/core/srs/: fsrs_scheduler.py  generator.py  json_store.py
backend/core/storage/: vector_store.py
config/: config.yml
data/: srs_state.json
