[project]
name = "rag-learning-assistant"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "python-multipart>=0.0.9",
    "streamlit>=1.36.0",
    "fsrs>=0.3.0",
    "httpx>=0.27.0",
    "torch",
    "torchvision",
    "transformers==4.42.0",
    "docling==2.15.0",
    "chromadb>=0.5.0",
    "openai>=1.54.0",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]